--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/aidalinfo/lib-prerending-spa#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
     "http-server": "^14.1.1",
     "path": "^0.12.7",
